# Ludex

./: .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
releases/: README.md
scripts/: cargo-check.cmd  cargo-test.cmd
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings.rs
src-tauri/src/database/: migrations.rs  mod.rs  settings_repository.rs
src-tauri/src/emulators/: mod.rs  pcsx2.rs
src-tauri/src/launcher/: mod.rs
src-tauri/src/metadata/: igdb.rs  mod.rs
src-tauri/src/native_dialogs/: mod.rs
src-tauri/src/scanner/: mod.rs
src/app/: App.tsx  styles.css
src/components/: AppShell.tsx  AppSidebar.tsx  ArcadiumLogo.tsx  ConfirmDialog.tsx  EmptyLibraryState.tsx  GameCard.tsx  GameGrid.tsx  GameVideoPlayer.tsx  LibraryMonitor.tsx  LibrarySyncLoader.tsx  LudexLogo.tsx  PageHeader.tsx  PlatformFilter.tsx  SearchBar.tsx
src/features/database/: database.service.ts
src/features/emulators/: emulators.service.ts  launch-profiles.service.ts  launcher.service.ts
src/features/games/: games.service.ts  play-sessions.service.ts  useGames.ts
src/features/library-scanner/: library-monitor.service.ts  scanner.service.ts  scanner.types.ts
src/features/metadata/: metadata.service.ts  (+5 more)
src/lib/: formatters.ts  native-dialogs.ts  storage-migration.test.ts  storage-migration.ts
src/pages/: GameDetails.tsx  Home.tsx  ImportLibrary.tsx  Settings.tsx
src/routes/: AppRoutes.tsx
src/types/: domain.ts
(+7 files in other folders)
