[package]
name = "ludex"
version = "0.5.1"
description = "Modern desktop library for local emulated games"
authors = ["Ludex Contributors"]
edition = "2021"

[lib]
name = "ludex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
notify = "8"
