[package]
name = "arcadium"
version = "0.6.3"
description = "Arcadium is a modern desktop library for organizing and launching local console games."
authors = ["Arcadium Contributors"]
edition = "2021"

[lib]
name = "arcadium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
notify = "8"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
